--- a/.classpath
+++ b/.classpath
@@ -77,6 +77,16 @@
   <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/com.ning/async-http-client/jars/async-http-client-1.9.21.jar"/>
   <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/oauth.signpost/signpost-core/jars/signpost-core-1.2.1.2.jar"/>
   <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/oauth.signpost/signpost-commonshttp4/jars/signpost-commonshttp4-1.2.1.2.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/com.typesafe.play/play-java-jpa_2.11/jars/play-java-jpa_2.11-2.4.3.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/org.hibernate.javax.persistence/hibernate-jpa-2.1-api/jars/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/org.hibernate/hibernate-entitymanager/jars/hibernate-entitymanager-4.3.7.Final.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/org.jboss.logging/jboss-logging-annotations/jars/jboss-logging-annotations-1.2.0.Beta1.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/org.hibernate/hibernate-core/jars/hibernate-core-4.3.7.Final.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/org.jboss.spec.javax.transaction/jboss-transaction-api_1.2_spec/jars/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/dom4j/dom4j/jars/dom4j-1.6.1.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/org.hibernate.common/hibernate-commons-annotations/jars/hibernate-commons-annotations-4.0.5.Final.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/antlr/antlr/jars/antlr-2.7.7.jar"/>
+  <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/org.jboss/jandex/jars/jandex-1.1.0.Final.jar"/>
   <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/com.typesafe.play/play-test_2.11/jars/play-test_2.11-2.4.3.jar"/>
   <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/org.hamcrest/hamcrest-core/jars/hamcrest-core-1.3.jar"/>
   <classpathentry kind="lib" path="/home/sebastian/.ivy2/cache/com.novocode/junit-interface/jars/junit-interface-0.11.jar"/>
