--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,6 +40,7 @@ db.default.jndiName=DefaultDS
 
 jpa.default=defaultPersistenceUnit
 
+ebean.default="models.*"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
