--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,21 +30,30 @@ play.i18n.langs = [ "en" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
 # db.default.username=sa
 # db.default.password=""
 
-# You can expose this datasource via JNDI if needed (Useful for JPA)
-db.default.jndiName=DefaultDS
+#Configuracion de la base de datos postgres
+db.default.driver=org.postgresql.Driver
+db.default.url="jdbc:postgresql://localhost/sonrisitasApp"
+db.default.username=postgres
+db.default.password=postgres
 
-jpa.default=defaultPersistenceUnit
+db.default.url=${?DATABASE_URL}
+#db.default.jndiName=DefaultDS
+ebean.default = ["models.*"]
 
-ebean.default="models.*"
+#jpa.default=defaultPersistenceUnit
+
+################################################ H2
+#db.default.driver = org.h2.Driver
+#db.default.url = "jdbc:h2:mem:play"
+#db.default.jndiName=DefaultDS
+#jpa.default=defaultPersistenceUnit
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# play.evolutions.enabled=false
+play.evolutions.enabled=false
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
