Añadida todas las rutas para los servicios rest

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,10 +36,10 @@ play.i18n.langs = [ "en" ]
 #Configuracion de la base de datos postgres
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost/sonrisitasApp"
-#db.default.username=postgres
-#db.default.password=postgres
-db.default.username=gnzkzvxklbimyh
-db.default.password=geqrkEWz20pKylx4j9_QD6QjZX
+db.default.username=postgres
+db.default.password=postgres
+#db.default.username=gnzkzvxklbimyh
+#db.default.password=geqrkEWz20pKylx4j9_QD6QjZX
 
 db.default.url=${?DATABASE_URL}
 #db.default.jndiName=DefaultDS
