credenciales para heroku

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -13,7 +13,6 @@ play.crypto.secret = "changeme"
 # The application languages
 # ~~~~~
 play.i18n.langs = [ "es" ]
-application.langs = "es"
 
 # Router
 # ~~~~~
@@ -37,10 +36,10 @@ application.langs = "es"
 #Configuracion de la base de datos postgres
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost/sonrisitasApp"
-db.default.username=postgres
-db.default.password=postgres
-#db.default.username=gnzkzvxklbimyh
-#db.default.password=geqrkEWz20pKylx4j9_QD6QjZX
+#db.default.username=postgres
+#db.default.password=postgres
+db.default.username=tbfjxycqypthzo
+db.default.password=IL9G7hPNimSQuDJ58_aOSdImuR
 
 db.default.url=${?DATABASE_URL}
 #db.default.jndiName=DefaultDS
