Commit de emergencia!

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,12 +8,14 @@
 # This must be changed for production, but we recommend not changing it in this file.
 #
 # See http://www.playframework.com/documentation/latest/ApplicationSecret for more details.
-play.crypto.secret = "changeme"
+play.crypto.secret = "soXoMpu8A0_K=_/bc?jo2:/zqa[yjtf2Hd/84knjFN;^n=;RznuW8ulCj^N2[5Q1"
 
 # The application languages
 # ~~~~~
 play.i18n.langs = [ "es" ]
 
+#HTTPS
+https.port=9443
 # Router
 # ~~~~~
 # Define the Router object to use for this application.
@@ -36,10 +38,10 @@ play.i18n.langs = [ "es" ]
 #Configuracion de la base de datos postgres
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost/sonrisitasApp"
-#db.default.username=postgres
-#db.default.password=postgres
-db.default.username=tbfjxycqypthzo
-db.default.password=IL9G7hPNimSQuDJ58_aOSdImuR
+db.default.username=postgres
+db.default.password=postgres
+#db.default.username=tbfjxycqypthzo
+#db.default.password=IL9G7hPNimSQuDJ58_aOSdImuR
 
 db.default.url=${?DATABASE_URL}
 #db.default.jndiName=DefaultDS
