Sprint 3: Pagina de Administrador, corregido el error del mail y mejorado la US reservar cita

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,3 +61,6 @@ play.evolutions.enabled=false
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
+# pasword de la cuenta de gmail
+# sonrisitas.servicio@gmail.com
+# sonri1208
