--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,8 +38,8 @@ https.port=9443
 #Configuracion de la base de datos postgres
 db.default.driver=org.postgresql.Driver
 db.default.url="jdbc:postgresql://localhost/sonrisitasApp"
-db.default.username=postgres
-db.default.password=postgres
+#db.default.username=postgres
+#db.default.password=postgres
 #db.default.username=tbfjxycqypthzo
 #db.default.password=IL9G7hPNimSQuDJ58_aOSdImuR
 
